<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.thavelka.feedme.ui.EditListingActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/edit_listing_img_place"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_trees"
            app:layout_aspectRatio="178%"
            app:layout_widthPercent="100%"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/edit_listing_gradient"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_alignBottom="@id/edit_listing_img_place"
            android:src="@drawable/image_shadow"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/edit_listing_text_image_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/edit_listing_img_place"
            android:gravity="end"
            android:visibility="gone"
            android:textColor="?android:attr/textColorSecondaryInverse"
            android:textColorLink="?android:attr/textColorSecondaryInverse"
            android:linksClickable="true"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/edit_listing_text_place_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edit_listing_text_place_address"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/edit_listing_text_place_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/edit_listing_img_place"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="?android:attr/textColorPrimaryInverse" />

        <TextView
            android:id="@+id/edit_listing_text_days_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_listing_img_place"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:paddingStart="4dp"
            android:textColor="@color/colorAccent"
            android:text="@string/edit_listing_days_of_week"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:id="@+id/edit_listing_layout_day_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_listing_text_days_label"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/edit_listing_btn_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/edit_listing_sun_abbr"
                android:textOff="@string/edit_listing_sun_abbr"
                android:layout_weight="1"/>

            <ToggleButton
                android:id="@+id/edit_listing_btn_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/edit_listing_mon_abbr"
                android:textOff="@string/edit_listing_mon_abbr"
                android:layout_weight="1"/>

            <ToggleButton
                android:id="@+id/edit_listing_btn_tue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/edit_listing_tues_abbr"
                android:textOff="@string/edit_listing_tues_abbr"
                android:layout_weight="1"/>

            <ToggleButton
                android:id="@+id/edit_listing_btn_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/edit_listing_wed_abbr"
                android:textOff="@string/edit_listing_wed_abbr"
                android:layout_weight="1"/>

            <ToggleButton
                android:id="@+id/edit_listing_btn_thu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/edit_listing_thu_abbr"
                android:textOff="@string/edit_listing_thu_abbr"
                android:layout_weight="1"/>

            <ToggleButton
                android:id="@+id/edit_listing_btn_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/edit_listing_fri_abbr"
                android:textOff="@string/edit_listing_fri_abbr"
                android:layout_weight="1"/>

            <ToggleButton
                android:id="@+id/edit_listing_btn_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/edit_listing_sat_abbr"
                android:textOff="@string/edit_listing_sat_abbr"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/edit_listing_text_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_listing_layout_day_buttons"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:paddingStart="4dp"
            android:textColor="@color/colorAccent"
            android:text="@string/edit_listing_description_label"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edit_listing_edittext_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_listing_text_description_label"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/edit_listing_description_hint"
            android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
            android:maxLength="300"
            android:maxLines="5" />

        <Button
            android:id="@+id/edit_listing_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/edit_listing_submit_label"
            style="?android:attr/borderlessButtonStyle" />

    </android.support.percent.PercentRelativeLayout>
</LinearLayout>
