<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/listing_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/listing_text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingEnd="16dp"
        android:paddingStart="72dp"
        android:text="@string/listing_cell_primary_placeholder"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/listing_text_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/listing_text_primary"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingEnd="16dp"
        android:paddingStart="72dp"
        android:text="@string/listing_cell_secondary_placeholder"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/listing_text_tertiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/listing_text_secondary"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingEnd="16dp"
        android:paddingStart="72dp"
        android:text="@string/listing_cell_tertiary_placeholder"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp" />
</RelativeLayout>